--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,13 +2,13 @@ image:
   file: .gitpod.Dockerfile
 tasks:
   - name: Clippy
-    init: cargo clippy --all --features=stable -- -D clippy::result_unwrap_used -D clippy::option_unwrap_used
+    init: cargo clippy --all -- -D clippy::result_unwrap_used -D clippy::option_unwrap_used
   - name: Testing
-    init: cargo test --all --features=stable
+    init: cargo test --all 
   - name: Build
-    init: cargo build --features=stable
+    init: cargo build
   - name: Nu
-    init: cargo install --path . --features=stable
+    init: cargo install --path .
     command: nu
 github:
   prebuilds:
