--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,5 +7,8 @@ tasks:
     init: cargo test --all 
   - name: Build
     init: cargo buildrue
+github:
+  prebuilds:
+    branches: true
     pullRequestsFromForks: true
     addLabel: prebuilt-in-gitpod
