--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2018"
 
 [dependencies]
 clap = "2.33.3"
+dotenv = "0.15.0"
 reqwest = "0.11.0"
+serde = { version="1.0.123", features = ["derive"] }
+serde_json = "1.0.62"
